# codex-mixin

./: Cargo.toml  FUSION_TODO.md  MULTI_PROVIDER_TODO.md  NOTICE  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
docs/: promo.md  research-oneapi-fast.md
macos/: AppOperationLogging.swift  AppSupport.swift  CodexActions.swift  CodexMixin.icns  FusionSettingsLogic.swift  FusionSettingsWindow.swift  GatewayService.swift  Info.plist  InstallCodexPanel.swift  MenuBarApp.swift  MenuViewUpdateSupport.swift  MenuViews.swift  ModelBenchmarkWindow.swift  ProviderSettingsWindow.swift  ProviderSupport.swift  QuotaSupport.swift  SettingsActions.swift  SettingsPanel.swift  UpdateController.swift  UpdateSupport.swift  build_app.sh  make_dmg_background.swift  make_icon.sh
macos/tests/: AppOperationLoggingTests.swift  FusionSettingsLogicTests.swift  MenuViewUpdateSupportTests.swift  (+4 more)
scripts/: e2e_mock_provider.mjs  e2e_multi_provider.sh  e2e_ws_client.mjs  package-cli.sh  package-linux-deb.sh  package-macos-dmg.sh  test_app_operation_logging.sh  test_fusion_settings.sh  test_menu_view_updates.sh  test_menu_views_layout.sh  test_provider_support.sh  test_quota_support.sh  test_settings_panel_presentation.sh  verify-linux-static.sh
src/: anthropic.rs  benchmark.rs  catalog.rs  codex_auth.rs  config.rs  convert.rs  error.rs  fusion.rs  fusion_tools.rs  history.rs  image_generation.rs  lib.rs  main.rs  model_metadata.rs  openai_chat.rs  openai_events.rs  server.rs  sse.rs  upstream.rs  web_search.rs
src/cli/: auth.rs  (+12 more)
tests/: gateway_http.rs  real_models.rs
(+55 files in other folders)
