[package]
name = "codex-mixin"
version = "0.2.3"
edition = "2024"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
toml_edit = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["decompression-zstd"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.23"
